--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,8 @@ header{
     background-attachment: fixed;
 }
 
+
+
 .footer{
     background-color: black;
 }
@@ -167,6 +169,16 @@ header{
 }
 
 /**The Basics.html*/
+
+.cards-grid{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
+    margin: 0;
+    padding: 20px;
+    border: 2px solid black;
+    scroll-behavior: smooth;
+}
 
 .cards{
     display: flex;
@@ -261,7 +273,19 @@ header{
     -webkit-text-stroke-color: black;
 }
 
+
 /**MY DND BEYOND*/
+
+.grid-cards{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
+    margin: 0;
+    padding: 20px;
+    border: 2px solid black;
+    scroll-behavior: smooth;
+}
+
 
 .card-five{
     width: 550px;
@@ -375,10 +399,12 @@ header{
 /*RESOURCES*/
 
 .squares{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
+    margin: 0;
+    padding: 20px;
+    border: 2px solid black;
     scroll-behavior: smooth;
 }
 
@@ -537,3 +563,9 @@ article{
     color: white;
 }
 
+
+/*BASICS TABLET*/
+
+@media (max-width: 768px){
+    
+}
