--- a/css/style.css
+++ b/css/style.css
@@ -158,14 +158,21 @@ header{
 
 .sign-up-form{
     color: whitesmoke;
+    display: flex;
     align-content: center;
     flex-wrap: wrap;
     justify-content: center;
-    width: 200px;
-    border: 15px solid firebrick;
+    width: 300px;
+    border: 5px solid firebrick;
     padding-left: 50px;
     padding-right: 50px;
     margin-left: 500px;
+}
+
+.sign-up-form h1 p{
+    display: flex;
+    text-align: center;
+
 }
 
 /**The Basics.html*/
@@ -819,5 +826,231 @@ article{
     align-self: center;
 }
 
+}
+
+/*INDEX.HTML MOBILE*/
+
+@media (max-width: 576px) {
+
+    .logo{
+        background-repeat:no-repeat;
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+        align-items: flex-start;
+        position:relative;
+    }
+    .log-in button{
+    background-color: rgb(204, 35, 12); 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    font-family: 'Source Sans Pro', sans-serif;
+    text-align: center;
+    text-decoration: none;
+    margin-left: 20px;
+    font-size: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.header logo{
+    background-color: black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 320px;
+}
+
+.background-img{
+    display: flex;
+    flex-wrap: wrap;
+    width: auto
 
 }
+
+.p-title{
+    display: flex;
+    flex-wrap: wrap;
+    width: 425px;
+    font-size: 23px;
+    text-align: center; 
+    color: white;
+    font-weight: bold;
+    font-family: 'Source Sans Pro', sans-serif; 
+    position: relative;
+    text-indent: 50px;
+}
+
+.p-text{
+    display: flex;
+    flex-wrap: wrap;
+    width:425px;
+    font-size: small;
+    text-align: justify;
+    color: white;
+    font-weight: normal;
+    font-family: 'Source Sans Pro', sans-serif;
+    position: relative;
+    text-indent: 10px;
+}
+
+.home-video-title{
+    margin-bottom: 20px;
+    margin-top: 10px;
+    color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: medium;
+    display: flex;
+    align-self: start;
+    justify-content: center;
+    margin-top: none;
+}
+
+.video{
+    display: flex;
+    justify-content: center;
+    size-adjust: 30%;
+}
+
+.form{
+    background-color: black;
+    width: 425px;
+}
+
+.sign-up-form{
+    color: whitesmoke;
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    justify-content:flex-start;
+    width: 300px;
+    border: 5px solid firebrick;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-left: 55px;
+}
+
+.sign-up-form h1 p{
+    display: flex;
+    text-align: center;
+
+}
+}
+
+/*INDEX.HTML TABLET*/
+
+@media (max-width:768px){
+
+
+    .logo{
+        background-repeat:no-repeat;
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+        align-items: flex-start;
+        position:relative;
+    }
+    .log-in button{
+    background-color: rgb(204, 35, 12); 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    font-family: 'Source Sans Pro', sans-serif;
+    text-align: center;
+    text-decoration: none;
+    margin-left: 20px;
+    font-size: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.header logo{
+    background-color: black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 320px;
+}
+
+.background-img{
+    display: flex;
+    flex-wrap: wrap;
+    width: auto
+
+}
+
+.p-title{
+    display: flex;
+    flex-wrap: wrap;
+    width: 768px;
+    font-size: 23px;
+    text-align: center; 
+    color: white;
+    font-weight: bold;
+    font-family: 'Source Sans Pro', sans-serif; 
+    position: relative;
+    text-indent: 50px;
+}
+
+.p-text{
+    display: flex;
+    flex-wrap: wrap;
+    width:768px;
+    font-size: small;
+    text-align: justify;
+    color: white;
+    font-weight: normal;
+    font-family: 'Source Sans Pro', sans-serif;
+    position: relative;
+    text-indent: 10px;
+}
+
+.home-video-title{
+    width: 768px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: medium;
+    display: flex;
+    align-self: start;
+    justify-content: center;
+}
+
+.video{
+    display: flex;
+    justify-content: center;
+    size-adjust: 50%;
+}
+
+.form{
+    background-color: black;
+    width: 768px;
+}
+
+.sign-up-form{
+    color: whitesmoke;
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    justify-content:flex-start;
+    width: 300px;
+    border: 5px solid firebrick;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-left: 250px;
+}
+
+.sign-up-form h1 p{
+    display: flex;
+    text-align: center;
+
+}
+}
+
+
