--- a/css/style.css
+++ b/css/style.css
@@ -97,15 +97,16 @@ header{
 
 
 .footer{
+    display: flex;
+    justify-content: center;
     background-color: black;
 }
 
 .social-media a{
     width:30px;
     height:30px;
-    display:inline-flex;
-    justify-content: center;
-    align-items: center;
+    display:flex;
+    gap: 20px;
     background-color: black;
 }
 
