--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,10 +4,10 @@
 @import "./components/bootstrap";
 @import "./components/buttons";
 @import "./layout/main-index";
-@import "./layout/basics";
-@import "./layout/mydndbey";
-@import "./layout/resources";
-@import "./layout/news";
+@import "./layout/main-basics";
+@import "./layout/main-mydndbey";
+@import "./layout/main-resources";
+@import "./layout/main-news";
 @import "./layout/footer";
 @import "./layout/media-mobile";
 @import "./layout/media-tablet";
