--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -1,4 +1,4 @@
-@media (max-width: 576px) {
+@media (max-width: 480px) {
 
     .logo{
         background-repeat:no-repeat;
@@ -72,9 +72,7 @@
     font-family: 'Source Sans Pro', sans-serif;
     font-size: medium;
     display: flex;
-    align-self: start;
     justify-content: center;
-    margin-top: none;
 }
 
 .video{
@@ -110,7 +108,7 @@
 
 /*BASICS MOBILE*/
 
-@media (max-width: 320px) {
+@media (max-width: 480px) {
     .logo{
         background-repeat:no-repeat;
         flex-wrap: wrap;
@@ -236,6 +234,307 @@
     justify-content: center;
     align-self: center;
 }
-
 }
 
+/*MY DND BEYOND*/
+@media (max-width:480px){
+    .grid-cards{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto;
+        margin: 0;
+        padding: 20px;
+        border: 2px solid black;
+        scroll-behavior: smooth;
+    }
+    
+    .card-five{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/my-characters-bcg.jpg);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 1;
+    }
+    
+    .card-six{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/my-campaigns-bcg.jpg);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 2;
+    }
+    
+    .card-seven{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/character-creation-bcg.jpg);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 3;
+    }
+    
+    .card-eight{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/homebrew-adventures-card-bcg.jfif);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 4;
+    }
+    
+    .card-nine{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/homebrew-creations-bcg.jfif);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 5;
+    }
+    
+    .card-ten{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/browse-presets-bcg.jpg);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 6;
+    }
+    
+    .card-title{
+        color: whitesmoke;
+        text-align: center;
+        padding-top: 40px;
+        text-decoration: solid underline;
+        font-size:xx-large;
+        font-family: 'Source Sans Pro', sans-serif;
+        outline: black;
+        -webkit-text-stroke-width: 1px ;
+        -webkit-text-stroke-color: black;
+    }
+}
+
+/*RESOURCES*/
+
+@media (max-width:480px){
+    .squares{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto;
+        margin: 0;
+        padding: 20px;
+        border: 2px solid black;
+        scroll-behavior: smooth;
+    }
+    
+    .square-one{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/dnd-5e-core-books-phb-dm-guide-monster-manual.png);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 1;
+    }
+    
+    .square-two{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        background-image: url(../assets/img/mordekainen-presents-cover.jpg);
+        order: 2;
+    }
+    
+    .square-three{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        background-image: url(../assets/img/012cf48b-e9ee-4e16-a67c-d0d0a0151e35.__CR0\,0\,970\,600_PT0_SX970_V1___.jpg);
+        order: 3;
+    }
+    
+    .square-four{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        background-image: url(../assets/img/Vecna-lives-cover-hd.jpg);
+        order: 4;
+    }
+    
+    .square-five{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        background-image: url(../assets/img/bcg-screen-dragons.jpg);
+        order: 5;
+    }
+    
+    .square-six{
+        width: 480px;
+        height: 250px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        background-image: url(../assets/img/beholder-bcg-screen.jpg);
+        order: 6; 
+    }
+    
+    .square-text{
+        color: white;
+        padding-top: 25%;
+        text-decoration: solid black;
+        font-size: x-large;
+        font-family: 'Source Sans Pro', sans-serif;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: black;
+    }
+}
+
+/*NEWS*/
+@media (max-width:480px){
+    .article-grid{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto;
+        width: auto
+    }
+    
+    .imageone{
+        width: 400px;
+        display: flex;
+        flex-wrap: wrap;
+        float: left;
+    }
+    
+    .imagetwo{
+        width:200px;
+        display: flex;
+        flex-wrap: wrap;
+        float: left;
+    }
+    
+    h2{
+        color: white;
+        font-size: large;
+        padding-bottom: 20px;
+        text-decoration: solid;
+        text-indent: 50px;
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    
+    article{
+        padding-bottom: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 10px;
+    }
+    
+    .article-text{
+        font-size: medium;
+        font-family: 'Source Sans Pro', sans-serif;
+        color: white;
+    }
+    
+    section .video{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
