--- a/scss/layout/_media-tablet.scss
+++ b/scss/layout/_media-tablet.scss
@@ -1,3 +1,117 @@
+/*INDEX TABLET*/
+
+@media (max-width:768px){
+
+
+    .logo{
+        background-repeat:no-repeat;
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+        align-items: flex-start;
+        position:relative;
+    }
+    .log-in button{
+    background-color: rgb(204, 35, 12); 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    font-family: 'Source Sans Pro', sans-serif;
+    text-align: center;
+    text-decoration: none;
+    margin-left: 20px;
+    font-size: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.header logo{
+    background-color: black;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 320px;
+}
+
+.background-img{
+    display: flex;
+    flex-wrap: wrap;
+    width: auto
+
+}
+
+.p-title{
+    display: flex;
+    flex-wrap: wrap;
+    width: 768px;
+    font-size: 23px;
+    text-align: center; 
+    color: white;
+    font-weight: bold;
+    font-family: 'Source Sans Pro', sans-serif; 
+    position: relative;
+    text-indent: 50px;
+}
+
+.p-text{
+    display: flex;
+    flex-wrap: wrap;
+    width:768px;
+    font-size: small;
+    text-align: justify;
+    color: white;
+    font-weight: normal;
+    font-family: 'Source Sans Pro', sans-serif;
+    position: relative;
+    text-indent: 10px;
+}
+
+.home-video-title{
+    width: 768px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: medium;
+    display: flex;
+    align-self: start;
+    justify-content: center;
+}
+
+.video{
+    display: flex;
+    justify-content: center;
+    size-adjust: 50%;
+}
+
+.form{
+    background-color: black;
+    width: 768px;
+}
+
+.sign-up-form{
+    color: whitesmoke;
+    display: flex;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    justify-content:flex-start;
+    width: 300px;
+    border: 5px solid firebrick;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-left: 250px;
+}
+
+.sign-up-form h1 p{
+    display: flex;
+    text-align: center;
+
+}
+}
+
+/*BASICS TABLET*/
 @media (max-width: 768px){
 
     .logo{
@@ -126,115 +240,308 @@
 }
 }
 
-/*INDEX TABLET*/
+/*MY DND BEYOND TABLET*/
 
-@media (max-width:768px){
+@media (max-width: 768px){
+    .grid-cards{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+        margin: 0;
+        padding: 20px;
+        border: 2px solid black;
+        scroll-behavior: smooth;
+    }
+    
+    
+    .card-five{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/my-characters-bcg.jpg);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 1;
+    }
+    
+    .card-six{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/my-campaigns-bcg.jpg);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 2;
+    }
+    
+    .card-seven{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/character-creation-bcg.jpg);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 3;
+    }
+    
+    .card-eight{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/homebrew-adventures-card-bcg.jfif);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 4;
+    }
+    
+    .card-nine{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/homebrew-creations-bcg.jfif);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 5;
+    }
+    
+    .card-ten{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/browse-presets-bcg.jpg);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 6;
+    }
+    
+    
+    .card-title{
+        color: whitesmoke;
+        text-align: center;
+        padding-top: 40px;
+        text-decoration: solid underline;
+        font-size:xx-large;
+        font-family: 'Source Sans Pro', sans-serif;
+        outline: black;
+        -webkit-text-stroke-width: 1px ;
+        -webkit-text-stroke-color: black;
+    }
 
+}
 
-    .logo{
-        background-repeat:no-repeat;
+/*RESOURCES TABLET*/
+
+@media (max-width: 768px){
+    .squares{
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto auto auto auto;
+    margin: 0;
+    padding: 20px;
+    border: 2px solid black;
+    scroll-behavior: smooth;
+
+    }
+    
+    .square-one{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-image: url(../assets/img/dnd-5e-core-books-phb-dm-guide-monster-manual.png);
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        order: 1;
+    }
+    
+    .square-two{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        background-image: url(../assets/img/mordekainen-presents-cover.jpg);
+        order: 2;
+    }
+    
+    .square-three{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        background-image: url(../assets/img/012cf48b-e9ee-4e16-a67c-d0d0a0151e35.__CR0\,0\,970\,600_PT0_SX970_V1___.jpg);
+        order: 3;
+    }
+    
+    .square-four{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        background-image: url(../assets/img/Vecna-lives-cover-hd.jpg);
+        order: 4;
+    }
+    
+    .square-five{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        background-image: url(../assets/img/bcg-screen-dragons.jpg);
+        order: 5;
+    }
+    
+    .square-six{
+        width: 550px;
+        height: 300px;
+        border:1px solid;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        justify-content: space-evenly;
+        align-items: center;
+        border-radius: 10%;
+        box-shadow: 32px 15px 15px -3px black;
+        background-size: cover;
+        text-align: center;
+        flex-wrap: wrap;
+        background-image: url(../assets/img/beholder-bcg-screen.jpg);
+        order: 6; 
+    }
+    
+    .square-text{
+        color: white;
+        padding-top: 25%;
+        text-decoration: solid black;
+        font-size: x-large;
+        font-family: 'Source Sans Pro', sans-serif;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: black;
+    }
+}
+
+/*NEWS */
+@media (max-width: 768px){
+    .article-grid{
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto;
+        width: auto
+    }
+    .imageone{
+        width: 400px;
+        display: flex;
+        flex-wrap: wrap;
+        float: right;
+    }
+    
+    .imagetwo{
+        width:200px;
+        display: flex;
+        flex-wrap: wrap;
+        float: right;
+    }
+    
+    h2{
+        color: white;
+        font-size: large;
+        padding-bottom: 20px;
+        text-decoration: solid;
+        text-indent: 50px;
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    
+    article{
+        padding-bottom: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
+        padding-top: 10px;
+    }
+    
+    .article-text{
+        font-size: medium;
+        font-family: 'Source Sans Pro', sans-serif;
+        color: white;
+    }
+    section .video{
+        display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        text-align: center;
-        align-items: flex-start;
-        position:relative;
     }
-    .log-in button{
-    background-color: rgb(204, 35, 12); 
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    font-family: 'Source Sans Pro', sans-serif;
-    text-align: center;
-    text-decoration: none;
-    margin-left: 20px;
-    font-size: 10px;
-    border-radius: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-}
-
-.header logo{
-    background-color: black;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 320px;
-}
-
-.background-img{
-    display: flex;
-    flex-wrap: wrap;
-    width: auto
-
-}
-
-.p-title{
-    display: flex;
-    flex-wrap: wrap;
-    width: 768px;
-    font-size: 23px;
-    text-align: center; 
-    color: white;
-    font-weight: bold;
-    font-family: 'Source Sans Pro', sans-serif; 
-    position: relative;
-    text-indent: 50px;
-}
-
-.p-text{
-    display: flex;
-    flex-wrap: wrap;
-    width:768px;
-    font-size: small;
-    text-align: justify;
-    color: white;
-    font-weight: normal;
-    font-family: 'Source Sans Pro', sans-serif;
-    position: relative;
-    text-indent: 10px;
-}
-
-.home-video-title{
-    width: 768px;
-    margin-bottom: 20px;
-    margin-top: 10px;
-    color: white;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: medium;
-    display: flex;
-    align-self: start;
-    justify-content: center;
-}
-
-.video{
-    display: flex;
-    justify-content: center;
-    size-adjust: 50%;
-}
-
-.form{
-    background-color: black;
-    width: 768px;
-}
-
-.sign-up-form{
-    color: whitesmoke;
-    display: flex;
-    align-content: flex-start;
-    flex-wrap: wrap;
-    justify-content:flex-start;
-    width: 300px;
-    border: 5px solid firebrick;
-    padding-left: 50px;
-    padding-right: 50px;
-    margin-left: 250px;
-}
-
-.sign-up-form h1 p{
-    display: flex;
-    text-align: center;
-
-}
 }
