--- a/css/style.css
+++ b/css/style.css
@@ -25,25 +25,20 @@ header {
   justify-content: space-evenly;
   align-items: center;
   border-radius: 10px; }
-
-.navbar-nav li a {
-  text-decoration: none;
-  color: whitesmoke;
-  padding: 20px;
-  display: block;
-  justify-content: space-evenly;
-  align-items: center;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: large; }
-
-.navbar-nav li {
-  display: inline-block;
-  text-align: center;
-  flex-wrap: wrap;
-  justify-content: space-evenly; }
-
-.navbar-bar li a:hover {
-  background: #6d1010; }
+  .navbar-nav li a {
+    text-decoration: none;
+    color: whitesmoke;
+    padding: 20px;
+    display: block;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: large; }
+  .navbar-nav li {
+    display: inline-block;
+    text-align: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly; }
+  .navbar-nav li a:hover {
+    background: #6d1010; }
 
 .search {
   max-width: 400px;
@@ -138,67 +133,34 @@ header {
   display: flex;
   text-align: center; }
 
-.cards-grid {
+.container {
   display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto auto;
-  margin: 0;
-  padding: 20px;
-  border: 2px solid black;
-  scroll-behavior: smooth; }
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 40px;
+  grid-row-gap: 40px; }
 
-.cards {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
-  align-items: center; }
-
-.card-one {
-  width: 550px;
-  height: 300px;
-  border: 1px solid;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  border-radius: 10%;
-  box-shadow: 32px 15px 15px -3px black;
-  background-size: cover;
-  text-align: center;
-  flex-wrap: wrap;
+.div1 {
+  grid-area: 1 / 1 / 2 / 2;
   background-image: url(../assets/img/players-handbook-cover.jpg);
   order: 1; }
 
-.card-two {
-  width: 550px;
-  height: 300px;
-  border: 1px solid;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  border-radius: 10%;
-  box-shadow: 32px 15px 15px -3px black;
-  background-size: cover;
-  text-align: center;
-  flex-wrap: wrap;
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
   background-image: url(../assets/img/dm-screen-desktop.jpg);
   order: 2; }
 
-.card-three {
-  width: 550px;
-  height: 300px;
-  border: 1px solid;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  border-radius: 10%;
-  box-shadow: 32px 15px 15px -3px black;
-  background-size: cover;
-  text-align: center;
-  flex-wrap: wrap;
+.div3 {
+  grid-area: 2 / 1 / 3 / 2;
   background-image: url(../assets/img/1e-dnd-bcg.jpg);
   order: 3; }
 
-.card-four {
+.div4 {
+  grid-area: 2 / 2 / 3 / 3;
+  background-image: url(../assets/img/ABCs-and-123s-Featured.jpg);
+  order: 4; }
+
+.div1, .div2, .div3, .div4 {
   width: 550px;
   height: 300px;
   border: 1px solid;
@@ -209,9 +171,9 @@ header {
   box-shadow: 32px 15px 15px -3px black;
   background-size: cover;
   text-align: center;
-  flex-wrap: wrap;
-  background-image: url(../assets/img/ABCs-and-123s-Featured.jpg);
-  order: 4; }
+  flex-wrap: wrap; }
+  .div1 ul li, .div2 ul li, .div3 ul li, .div4 ul li {
+    list-style: none; }
 
 .card-header {
   color: whitesmoke;
@@ -231,7 +193,8 @@ header {
   font-size: x-large;
   font-family: 'Source Sans Pro', sans-serif;
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black; }
+  -webkit-text-stroke-color: black;
+  list-style: none; }
 
 .grid-cards {
   display: grid;
@@ -1079,57 +1042,31 @@ section .video {
     flex-wrap: wrap;
     justify-content: center;
     width: 320px; }
-  .cards {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    width: auto; }
-  .card-one {
-    width: 300px;
-    height: 350px;
-    border: 1px solid;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    border-radius: 10%;
-    box-shadow: 32px 15px 15px -3px black;
-    background-size: cover;
-    text-align: center;
-    flex-wrap: wrap;
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 30px; }
+  .div1 {
+    grid-area: 1 / 1 / 2 / 2;
     background-image: url(../assets/img/players-handbook-cover.jpg);
     order: 1; }
-  .card-two {
-    width: 550px;
-    height: 300px;
-    border: 1px solid;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    border-radius: 10%;
-    box-shadow: 32px 15px 15px -3px black;
-    background-size: cover;
-    text-align: center;
-    flex-wrap: wrap;
+  .div2 {
+    grid-area: 2 / 1 / 3 / 2;
     background-image: url(../assets/img/dm-screen-desktop.jpg);
     order: 2; }
-  .card-three {
-    width: 550px;
-    height: 300px;
-    border: 1px solid;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    border-radius: 10%;
-    box-shadow: 32px 15px 15px -3px black;
-    background-size: cover;
-    text-align: center;
-    flex-wrap: wrap;
+  .div3 {
+    grid-area: 3 / 1 / 4 / 2;
     background-image: url(../assets/img/1e-dnd-bcg.jpg);
     order: 3; }
-  .card-four {
-    width: 550px;
-    height: 300px;
+  .div4 {
+    grid-area: 4 / 1 / 5 / 2;
+    background-image: url(../assets/img/ABCs-and-123s-Featured.jpg);
+    order: 4; }
+  .div1, .div2, .div3, .div4 {
+    width: 330px;
+    height: 250px;
     border: 1px solid;
     margin-left: 20px;
     margin-right: 20px;
@@ -1138,9 +1075,9 @@ section .video {
     box-shadow: 32px 15px 15px -3px black;
     background-size: cover;
     text-align: center;
-    flex-wrap: wrap;
-    background-image: url(../assets/img/tablet/ABCs-and-123s-Featured-\tablet.jpg);
-    order: 4; }
+    flex-wrap: wrap; }
+    .div1 ul li, .div2 ul li, .div3 ul li, .div4 ul li {
+      list-style: none; }
   .background-img {
     background-image: url(../assets/img/red-smoke-bcg-1.jfif);
     width: 320px;
@@ -1415,3 +1352,7 @@ section .video {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; } }
+
+img {
+  max-width: 100%;
+  display: block; }
