--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -21,26 +21,24 @@ header{
     justify-content: space-evenly;
     align-items: center;
     border-radius: 10px;
-}
-.navbar-nav li a{
-    text-decoration: none;
-    color: whitesmoke;
-    padding: 20px;
-    display: block;
-    justify-content: space-evenly;
-    align-items: center;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: large;
-}
-.navbar-nav li {
-    display: inline-block;
-    text-align: center;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-.navbar-bar li a:hover {
-    background: rgb(109, 16, 16);
-}
+        li a{
+            text-decoration: none;
+            color: whitesmoke;
+            padding: 20px;
+            display: block;
+            font-family: 'Source Sans Pro', sans-serif;
+            font-size: large;
+        }
+        li {
+            display: inline-block;
+            text-align: center;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+        }
+        li a:hover {
+            background: rgb(109, 16, 16);
+        }
+    }
 
 .search{
     max-width: 400px;
