--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -141,17 +141,41 @@
     width: 320px;
 }
 
-.cards{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    width: auto;
+.container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 30px;
 }
 
-.card-one{
-    width: 300px;
-    height: 350px;
+.div1 {
+        grid-area: 1 / 1 / 2 / 2; 
+        background-image: url(../assets/img/players-handbook-cover.jpg);
+        order: 1;
+}
+
+.div2 { 
+        grid-area: 2 / 1 / 3 / 2; 
+        background-image: url(../assets/img/dm-screen-desktop.jpg);
+        order: 2;
+}
+
+    .div3 { 
+        grid-area: 3 / 1 / 4 / 2; 
+        background-image: url(../assets/img/1e-dnd-bcg.jpg);
+        order: 3;
+}
+
+    .div4 { 
+        grid-area: 4 / 1 / 5 / 2; 
+        background-image: url(../assets/img/ABCs-and-123s-Featured.jpg);
+        order: 4;
+}
+
+.div1, .div2, .div3, .div4{
+    width: 330px;
+    height: 250px;
     border:1px solid;
     margin-left: 20px;
     margin-right: 20px;
@@ -161,58 +185,10 @@
     background-size: cover;
     text-align: center;
     flex-wrap: wrap;
-    background-image: url(../assets/img/players-handbook-cover.jpg);
-    order: 1;
+    ul li{
+        list-style: none;
+    }
 }
-
-.card-two{
-    width: 550px;
-    height: 300px;
-    border:1px solid;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    border-radius: 10%;
-    box-shadow: 32px 15px 15px -3px black;
-    background-size: cover;
-    text-align: center;
-    flex-wrap: wrap;
-    background-image: url(../assets/img/dm-screen-desktop.jpg);
-    order: 2;
-}
-
-.card-three{
-    width: 550px;
-    height: 300px;
-    border:1px solid;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    border-radius: 10%;
-    box-shadow: 32px 15px 15px -3px black;
-    background-size: cover;
-    text-align: center;
-    flex-wrap: wrap;
-    background-image: url(../assets/img/1e-dnd-bcg.jpg);
-    order: 3;
-}
-
-.card-four{
-    width: 550px;
-    height: 300px;
-    border:1px solid;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    border-radius: 10%;
-    box-shadow: 32px 15px 15px -3px black;
-    background-size: cover;
-    text-align: center;
-    flex-wrap: wrap;
-    background-image: url(../assets/img/tablet/ABCs-and-123s-Featured-\tablet.jpg);
-    order: 4;
-}
-
 .background-img{
     background-image:url(../assets/img/red-smoke-bcg-1.jfif) ;
     width: 320px;
