--- a/scss/layout/_media-mobile.scss
+++ b/scss/layout/_media-mobile.scss
@@ -39,6 +39,13 @@
 
 }
 
+main{
+    display: flex;
+    flex-wrap: wrap;
+    width: auto;
+    scroll-behavior: smooth;
+}
+
 .p-title{
     display: flex;
     flex-wrap: wrap;
@@ -132,6 +139,7 @@
     flex-wrap: wrap;
     justify-content: flex-start;
 }
+
 
 .header logo{
     background-color: black;
@@ -468,27 +476,21 @@
     .article-grid{
         display: grid;
         grid-template-columns: auto;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: auto;
         width: auto
     }
     
     .imageone{
-        width: 400px;
-        display: flex;
-        flex-wrap: wrap;
-        float: left;
+        display: none;
     }
     
     .imagetwo{
-        width:200px;
-        display: flex;
-        flex-wrap: wrap;
-        float: left;
+        display: none;
     }
     
     h2{
         color: white;
-        font-size: large;
+        font-size: small;
         padding-bottom: 20px;
         text-decoration: solid;
         text-indent: 50px;
@@ -503,14 +505,12 @@
     }
     
     .article-text{
-        font-size: medium;
+        font-size: x-small;
         font-family: 'Source Sans Pro', sans-serif;
         color: white;
     }
     
-    section .video{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+    .news-video{
+        display: none;
     }
 }
