Tried to make it responsive for mobile

--- a/scss/layout/_main-news.scss
+++ b/scss/layout/_main-news.scss
@@ -41,7 +41,7 @@ article{
     color: white;
 }
 
-section .video{
+section .news-video{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
