--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -2,3 +2,10 @@ img{
     max-width: 100%;
     display: block;
 }
+
+.background-img{
+    background-image:url(../assets/img/red-smoke-bcg-1.jfif) ;
+    background-position: center;
+    background-size: auto ;
+    background-attachment: fixed;
+}
