--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,6 @@ header {
 
 .background-img {
   background-image: url(../assets/img/red-smoke-bcg-1.jfif);
-  width: auto;
   background-position: center;
   background-size: cover;
   background-attachment: fixed; }
@@ -461,7 +460,7 @@ article {
   font-family: 'Source Sans Pro', sans-serif;
   color: white; }
 
-section .video {
+section .news-video {
   display: flex;
   flex-wrap: wrap;
   justify-content: center; }
@@ -888,15 +887,15 @@ section .video {
     grid-template-rows: auto auto auto;
     width: auto; }
   .imageone {
-    width: 400px;
+    width: 200px;
     display: flex;
     flex-wrap: wrap;
-    float: right; }
+    float: left; }
   .imagetwo {
     width: 200px;
     display: flex;
     flex-wrap: wrap;
-    float: right; }
+    float: left; }
   h2 {
     color: white;
     font-size: large;
@@ -913,10 +912,8 @@ section .video {
     font-size: medium;
     font-family: 'Source Sans Pro', sans-serif;
     color: white; }
-  section .video {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; } }
+  .news-video {
+    display: none; } }
 
 .footer {
   background-color: black; }
@@ -961,6 +958,11 @@ section .video {
     display: flex;
     flex-wrap: wrap;
     width: auto; }
+  main {
+    display: flex;
+    flex-wrap: wrap;
+    width: auto;
+    scroll-behavior: smooth; }
   .p-title {
     display: flex;
     flex-wrap: wrap;
@@ -1320,21 +1322,15 @@ section .video {
   .article-grid {
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto;
     width: auto; }
   .imageone {
-    width: 400px;
-    display: flex;
-    flex-wrap: wrap;
-    float: left; }
+    display: none; }
   .imagetwo {
-    width: 200px;
-    display: flex;
-    flex-wrap: wrap;
-    float: left; }
+    display: none; }
   h2 {
     color: white;
-    font-size: large;
+    font-size: small;
     padding-bottom: 20px;
     text-decoration: solid;
     text-indent: 50px;
@@ -1345,14 +1341,18 @@ section .video {
     padding-right: 30px;
     padding-top: 10px; }
   .article-text {
-    font-size: medium;
+    font-size: x-small;
     font-family: 'Source Sans Pro', sans-serif;
     color: white; }
-  section .video {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; } }
+  .news-video {
+    display: none; } }
 
 img {
   max-width: 100%;
   display: block; }
+
+.background-img {
+  background-image: url(../assets/img/red-smoke-bcg-1.jfif);
+  background-position: center;
+  background-size: auto;
+  background-attachment: fixed; }
