--- a/scss/layout/_media-tablet.scss
+++ b/scss/layout/_media-tablet.scss
@@ -505,17 +505,17 @@
         width: auto
     }
     .imageone{
-        width: 400px;
+        width: 200px;
         display: flex;
         flex-wrap: wrap;
-        float: right;
+        float: left;
     }
     
     .imagetwo{
         width:200px;
         display: flex;
         flex-wrap: wrap;
-        float: right;
+        float: left;
     }
     
     h2{
@@ -539,9 +539,7 @@
         font-family: 'Source Sans Pro', sans-serif;
         color: white;
     }
-    section .video{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+    .news-video{
+        display: none;
     }
 }
